<?xml version="1.0"?>
<package format="2">
  <name>lrodriguez-umd</name>
  <version>0.0.0</version>
  <description>The lrodriguez-umd package</description>
  <maintainer email="lrodr@umich.edu">Luis</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <!--<run_depend>roscpp</run_depend>-->
  <build_depend>geometry_msgs</build_depend>
  <!--<run_depend>geometry_msgs</run_depend>-->
  <build_depend>rospy</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
